# CAI

./: .env.template  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  condaenv.m4rpnchv.requirements.txt  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
docs/: RESEARCH_LOG.md  ai_fusion.md  data_sources.md  experiments.md  features.md  labels.md  project_plan.md  reproducibility.md  research_protocol.md  risk.md
docs/diagrams/: architecture.mmd  project.md  trade_life_cycle.mmd
experiments/experiment_YYYY-MM-DD_id/: config.yaml  results.csv
models/lstm/20250817_192104/: best_model.h5  comment.md  lstm_BTC-USDT_1h_20250817T135149Z.joblib  lstm_BTC-USDT_1h_20250817T135149Z.json  train_tabular.py
models/tabular/20250817_182602/: rf_BTC-USDT_1h_20250817T125608Z.json
notebooks/: 01-data-exploration.ipynb  02-feature-engineering.ipynb  03-model-prototyping.ipynb
scripts/: evaluate.sh  fetch_data.py  run_experiment.sh
scripts/inference/: run_fusion_strategy.py
scripts/optimization/: optimize_strategy.py  result.md
scripts/training/: train_regime_classifier.py  train_volatility_forecaster.py
src/: __init__.py
src/api/: serve.py
src/backtest/: backtester.py
src/crypto_trading_ai_research.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/data/: loader.py  preprocessing.py
src/experiments/: tracker.py
src/features/: engineering.py
src/models/: model.py  predict.py  train.py
src/utils/: config.py  metrics.py
tests/: test_data.py  test_models.py
(+26 files in other folders)
